--- a/src/.devcontainer/devcontainer.json
+++ b/src/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
   "image": "${localEnv:IMAGE_NAME}:${localEnv:IMAGE_TAG}",
   "features": {
-    "github-cli": "latest",
-    "ghcr.io/devcontainers/features/sshd:1": {
-      "version": "latest"
-    }
+    "github-cli": "latest"
   }
 }
